[package]
name = "BotTest"
version = "0.1.0"
authors = ["serge <sergei.galiullin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
telegram-bot = "*"
tokio-core = "0.1.17"
